# mpf-plugin-rules

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: 01_subscribe_orders_events.cpp  02_lightweight_plugin.cpp  03_cross_plugin_qml.qml  README.md
include/: demo_service.h  rule_model.h  rules_plugin.h  rules_service.h
qml/: CreateRuleDialog.qml  DemoPage.qml  RuleCard.qml  RulesPage.qml
src/: demo_service.cpp  rule_model.cpp  rules_plugin.cpp  rules_service.cpp
